@@ -1,4 +1,4 @@
-.\" RCSid $Id: wrapBSDF.1,v 1.2 2015/05/20 08:40:48 greg Exp $
+.\" RCSid $Id: wrapBSDF.1,v 1.3 2015/05/29 07:45:48 greg Exp $
 .TH WRAPBSDF 1 2/20/2015 RADIANCE
 .SH NAME
 wrapBSDF - put XML wrapper around WINDOW6 BSDF data
@@ -26,6 +26,8 @@ wrapBSDF - put XML wrapper around WINDOW6 BSDF data
 .B "\-rb inp"
 ][
 .B "\-rf inp"
+][
+.B "\-C comm"
 ][
 .B "input.xml"
 ]
@@ -116,6 +118,13 @@ can take data from the standard input by using a hyphen ('-')
 in place of the file, but only one option at most may read from stdin.
 Data input may be read from another program by beginning the input
 specification with a quoted exclamation point ('!') followed by the command.
+.PP
+The
+.I \-C
+option may be used to specify a comment to be inserted near the
+head of the output.
+Up to 30 comment strings may be given, and they will appear one
+after the other in the prologue surrounded by the XML comment syntax.
 .SH EXAMPLE
 Create an WINDOW6 BSDF from computed transmission matrix:
 .IP "" .2i
